--- a/VinAdfrCloik/VAG_Post/VAFokaPostTernaler.xib
+++ b/VinAdfrCloik/VAG_Post/VAFokaPostTernaler.xib
@@ -22,7 +22,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="eam-hT-dTf">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleAspectFill" id="eam-hT-dTf">
             <rect key="frame" x="0.0" y="0.0" width="402" height="874"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -126,12 +126,10 @@
                     <color key="textColor" red="1" green="0.96078431369999995" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wR8-jt-yuH">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wR8-jt-yuH">
                     <rect key="frame" x="16" y="616" width="370" height="45"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.85098039219999999" green="0.59999999999999998" blue="0.24313725489999999" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="EaQ-Po-DVa"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title="Next">
@@ -179,9 +177,7 @@
                 <constraint firstItem="D6u-rA-WEY" firstAttribute="leading" secondItem="rCE-zv-Vnb" secondAttribute="leading" id="HIu-w0-9Eb"/>
                 <constraint firstItem="Zno-Jq-ei6" firstAttribute="top" secondItem="Q0Y-EK-lug" secondAttribute="bottom" constant="16" id="KXq-1K-SkN"/>
                 <constraint firstItem="O50-UI-RpI" firstAttribute="width" secondItem="Gsq-Qt-9FY" secondAttribute="width" id="LF0-ec-grX"/>
-                <constraint firstItem="wR8-jt-yuH" firstAttribute="top" secondItem="D6u-rA-WEY" secondAttribute="bottom" constant="50" id="Lsy-e9-Xjq"/>
                 <constraint firstItem="O50-UI-RpI" firstAttribute="leading" secondItem="p7U-IU-6Rn" secondAttribute="leading" constant="-15" id="NbA-vc-H0K"/>
-                <constraint firstItem="wR8-jt-yuH" firstAttribute="leading" secondItem="eam-hT-dTf" secondAttribute="leading" constant="16" id="Q2q-SL-Lc0"/>
                 <constraint firstItem="nlr-CM-lHL" firstAttribute="trailing" secondItem="Gsq-Qt-9FY" secondAttribute="trailing" constant="-12" id="Q5N-jE-qF2"/>
                 <constraint firstAttribute="trailing" secondItem="O50-UI-RpI" secondAttribute="trailing" constant="13" id="WEi-NG-EEz"/>
                 <constraint firstItem="jgC-1t-KT7" firstAttribute="centerX" secondItem="eam-hT-dTf" secondAttribute="centerX" id="Wk9-8V-eCE"/>
@@ -206,7 +202,6 @@
                 <constraint firstItem="Q0Y-EK-lug" firstAttribute="top" secondItem="eBX-ta-BhZ" secondAttribute="top" id="mGR-4L-94O"/>
                 <constraint firstItem="RvN-ON-QLU" firstAttribute="centerY" secondItem="rCE-zv-Vnb" secondAttribute="centerY" id="mcc-sV-N9l"/>
                 <constraint firstItem="9S1-Jw-lCR" firstAttribute="trailing" secondItem="O50-UI-RpI" secondAttribute="trailing" constant="-12" id="n4u-nb-exj"/>
-                <constraint firstAttribute="trailing" secondItem="wR8-jt-yuH" secondAttribute="trailing" constant="16" id="nG2-rq-nI4"/>
                 <constraint firstItem="rCE-zv-Vnb" firstAttribute="leading" secondItem="RvN-ON-QLU" secondAttribute="leading" constant="-15" id="pCj-LK-T71"/>
                 <constraint firstItem="k2R-xv-zlV" firstAttribute="centerY" secondItem="D6u-rA-WEY" secondAttribute="centerY" id="pp4-PA-7hg"/>
                 <constraint firstItem="Gsq-Qt-9FY" firstAttribute="leading" secondItem="eam-hT-dTf" secondAttribute="leading" constant="13" id="q0a-6p-wCN"/>
