--- a/VinAdfrCloik/VAG_ohome/VAFokayHomeTernaler.xib
+++ b/VinAdfrCloik/VAG_ohome/VAFokayHomeTernaler.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -54,7 +54,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DNv-Xc-18L">
                             <rect key="frame" x="0.0" y="0.0" width="95.5" height="93"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk" highlightedImage="home_bgk_Sel" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fyE-0e-XeV">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk_Sel" translatesAutoresizingMaskIntoConstraints="NO" id="fyE-0e-XeV">
                                     <rect key="frame" x="0.0" y="20" width="95.5" height="73"/>
                                 </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vaf_Clothing" translatesAutoresizingMaskIntoConstraints="NO" id="m3A-4I-DtY">
@@ -87,7 +87,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pX7-f2-jnS">
                             <rect key="frame" x="107.5" y="0.0" width="95.5" height="93"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk" highlightedImage="home_bgk_Sel" translatesAutoresizingMaskIntoConstraints="NO" id="0YL-w5-rJ7">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk" translatesAutoresizingMaskIntoConstraints="NO" id="0YL-w5-rJ7">
                                     <rect key="frame" x="0.0" y="20" width="95.5" height="73"/>
                                 </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vaf_Bottoms" translatesAutoresizingMaskIntoConstraints="NO" id="Ssm-nB-X8X">
@@ -120,7 +120,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wrZ-Jq-mMQ">
                             <rect key="frame" x="215" y="0.0" width="95.5" height="93"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk" highlightedImage="home_bgk_Sel" translatesAutoresizingMaskIntoConstraints="NO" id="Nzs-Qn-WUM">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk" translatesAutoresizingMaskIntoConstraints="NO" id="Nzs-Qn-WUM">
                                     <rect key="frame" x="0.0" y="20" width="95.5" height="73"/>
                                 </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vaf_Accessories" translatesAutoresizingMaskIntoConstraints="NO" id="6xY-gi-Oss">
@@ -153,7 +153,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h9Y-za-VOS">
                             <rect key="frame" x="322.5" y="0.0" width="95.5" height="93"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk" highlightedImage="home_bgk_Sel" translatesAutoresizingMaskIntoConstraints="NO" id="wZk-dC-0cw">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk" translatesAutoresizingMaskIntoConstraints="NO" id="wZk-dC-0cw">
                                     <rect key="frame" x="0.0" y="20" width="95.5" height="73"/>
                                 </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vaf_Shoes" translatesAutoresizingMaskIntoConstraints="NO" id="LzS-w8-VPr">
@@ -186,7 +186,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fFZ-9R-Qv9">
                             <rect key="frame" x="430" y="0.0" width="95.5" height="93"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk" highlightedImage="home_bgk_Sel" translatesAutoresizingMaskIntoConstraints="NO" id="m2c-Zj-tya">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_bgk" translatesAutoresizingMaskIntoConstraints="NO" id="m2c-Zj-tya">
                                     <rect key="frame" x="0.0" y="20" width="95.5" height="73"/>
                                 </imageView>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vaf_Bags" translatesAutoresizingMaskIntoConstraints="NO" id="VC6-Sk-xqJ">
